--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Hello World
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Markdown Templates</title>
+  <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+</head>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <h1>Markdown Templates</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-2">
+        <ul class="list-unstyled">
+          <li><a href="article.md">Article</a></li>
+          <li><a href="interview.md">Interview</a></li>
+          <li><a href="essay.md">Essay</a></li>
+          <li><a href="poem.md">Poem</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+<body>
+</body>
+</html>
